    that it contains both Soup-2.4.typelib and SoupGNOME-2.4.typelib.
  * Drop obsolete Provides on gir1.2-soup-gnome-2.4: nothing depends on
    it, and it does not match the naming scheme used in the g-i
    mini-policy.

  [ Jeremy Bicha ]
  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2

 -- Simon McVittie <smcv@debian.org>  Mon, 13 Nov 2017 00:14:17 +0000

libsoup2.4 (2.60.2-1) unstable; urgency=medium

  * New upstream release

 -- Michael Biebl <biebl@debian.org>  Tue, 31 Oct 2017 23:21:09 +0100

libsoup2.4 (2.60.1-1) unstable; urgency=medium

  * New upstream release (LP: #1717216)
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 11 Oct 2017 10:12:43 -0400

libsoup2.4 (2.60.0-1) unstable; urgency=medium

  * New upstream translations release

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 12 Sep 2017 11:03:12 -0400

libsoup2.4 (2.59.90.1-1) unstable; urgency=medium

  * New upstream release
  * Drop all patches, applied in new release
  * debian/libsoup2.4-1.symbols: Add new symbols
  * debian/control.in:
    - Build-depend on apache2 and php-xmlrpc for build tests
  * Bump Standards-Version to 4.1.0

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 30 Aug 2017 20:59:56 -0400

libsoup2.4 (2.56.1-1) unstable; urgency=high

  * New upstream release.
    + CVE-2017-2885: Fixed a chunked decoding buffer overrun that
      could be exploited against either clients or servers.
      Closes: #871650.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 10 Aug 2017 18:29:43 +0200

libsoup2.4 (2.56.0-2) unstable; urgency=medium

  * Team upload
  * Add patches from upstream 2.57.1 to make freeing a SoupSession
    thread-safe, fixing one of several root causes of ostree test
    failures (see #827473 and
    https://github.com/ostreedev/ostree/issues/601).

 -- Simon McVittie <smcv@debian.org>  Wed, 21 Dec 2016 17:10:16 +0000

libsoup2.4 (2.56.0-1) unstable; urgency=medium
