@@ -1,11 +1,10 @@
 #!/usr/bin/make -f
-
-include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
+-include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 
 GNOME_MODULE := libsoup
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,-O1 -Wl,--as-needed
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,--as-needed
 
 %:
 	dh $@ --with gir,gnome
@@ -17,11 +16,18 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 		--enable-gtk-doc
 
+override_dh_install:
+	find debian/tmp/usr/lib -name '*.la' -delete
+	dh_install
+
+override_dh_missing:
+	dh_missing --list-missing
+
 override_dh_strip:
 	dh_strip --dbgsym-migration='libsoup2.4-dbg (<< 2.54.0.1-1~)'
 
 override_dh_makeshlibs:
-	dh_makeshlibs -V -- -c4
+	dh_makeshlibs -- -c4
 
 CHECK_HOME = $(CURDIR)/debian/tmp/home
 
