@@ -11,6 +11,7 @@ libsoup2.4 (2.60.2-2) UNRELEASED; urgency=medium
   * Update Vcs fields for conversion to git
   * Add debian/gbp.conf
   * Bump Standards-Version to 4.1.2
+  * Bump debhelper compat to 11
 
  -- Simon McVittie <smcv@debian.org>  Mon, 13 Nov 2017 00:14:17 +0000
 
